--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
 	<link rel="stylesheet" href="css/bootstrap-grid.min.css">
 	<link rel="stylesheet" href="css/swiper-bundle.min.css" />
 	<link rel="stylesheet" href="css/style.css">
-	<script src="/js/cars.js" defer></script>
+	<script src="/js/cart.js" defer></script>
 	<script src="/js/search.js" defer></script>
+	<script src="/js/goods.js" defer></script>
 </head>
 <!-- class="show-goods" -->
 
