--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<link rel="stylesheet" href="css/style.css">
 	<script src="/js/cart.js" defer></script>
 	<script src="/js/search.js" defer></script>
-	<script src="/js/goods.js" defer></script>
+	<script src="/js/getGoods.js" defer></script>
 </head>
 <!-- class="show-goods" -->
 
@@ -58,8 +58,7 @@
 			</div>
 			<div class="col-lg-2 d-none d-lg-block">
 				<div class="form-control search-block">
-					<input type="text" class="form-control" placeholder="Search" aria-label="Recipient's username"
-						aria-describedby="button-addon2">
+					<input type="text" class="form-control" placeholder="Search" aria-label="Recipient's username" aria-describedby="button-addon2">
 					<button class="btn btn-outline-secondary" type="button" id="button-addon2">
 						<img src="img/search.png" alt="search">
 					</button>
@@ -218,7 +217,7 @@
 			</div>
 			<!-- /.col-9 -->
 			<div class="col-3 d-flex justify-content-end">
-				<a href="#" class="more">View All</a>
+				<a href="/goods.html" class="more">View All</a>
 			</div>
 			<!-- /.col-3 -->
 		</div>
